# petal

./: CMakeLists.txt  LICENSE  README.md
CMake trash  82889182187278/: CMakeLists.txt
CMake trash  82889182187278/CMake trash  82889182187278/: CMake trash  82889182187278.cpp  CMake trash  82889182187278.h  CMakeLists.txt
CMake trash  82889182187278/CMake trash  82889182187278/petal/: base.cpp  base.h
Petal/: CMakeLists.txt  Petal.cpp  Petal.h
Petal/petal (2)/: base.cpp  base.h
Petal/petal_/: base.cpp  base.h  extras.cpp  extras.h  petal.cpp  petal.h  petalconfig.h
Petal/petal_/Test(trash_files)/: base.h  extras.cpp  extras.h  pt.cpp  pt.hpp  test.cpp  test.h
