# CMakeList.txt: proyecto de CMake para CMake trash  82889182187278, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

# Agregue un origen al ejecutable de este proyecto.
add_executable (CMakeTarget "CMake trash  82889182187278.cpp" "CMake trash  82889182187278.h" "petal/base.cpp")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
